@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2642 2003/06/30 15:55:41 grant Exp $
+$NetBSD: CHANGES,v 1.2643 2003/06/30 18:02:04 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2634,3 +2634,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated libnbcompat to 20030630 [grant 2003-06-30]
 	Updated py-dns to 1.0.0 [gson 2003-06-30]
 	Updated mtree to 20030630 [grant 2003-06-30]
+	Updated vmware-module3 to 3.2.1.2 [jdolecek 2003-06-30]
